<resources>
    <string name="app_name">MovieCatalogueJetPack</string>

    <string name="tab1_title" translatable="false">Movie</string>
    <string name="tab2_title" translatable="false">TV Show</string>

    <string name="favorite" translatable="false">My Favorite</string>

    <!--Movie List-->
    <string name="a_star_is_born" translatable="false">Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his ow
    <string name="alita_battle_angel" translatable="false">When Alita awakens with no memory of who she is in a future world she does not recognize, she is taken in by Ido, a compassionate doctor who realizes that somewhere in this abandoned cyborg shell is the heart and soul of a young woman with an extraordinary past.</string>
    <string name="aquaman" translatable="false">Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</str
    <string name="master_z" translatable="false">Following his defeat by Master Ip, Cheung Tin Chi (Zhang) tries to make a life with his young son in Hong Kong, waiting tables at a bar that caters to expats. But it s not long before the mix of foreigners, money, and triad leaders draw him once again to the fight.</string>
...
